When turning VR mode on, the controllers show, even when there are no controllers in the system #109121

Closed
opened 2023-06-19 13:16:33 +02:00 by Dalai Felinto · 3 comments

System

  • ConceptD 7 (laptop with holographic display using OpenXR backend on Windows)

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-06-19 00:21, hash: fde76c8b4d0d
Worked: - (technically in old Blenders before we had XR input support)

Short description of error
When turning VR mode on, the controllers show, even when there are no controllers in the system.

Exact steps for others to reproduce the error

I don't know if the issue is unique to this system, but this is a laptop that uses OpenXR backend to handle head tracking and has an holographic display but no "VR controllers".

  • Turn on VR
  • You will see a big gizmo in the screen (black circle, with a XYZ gizmo on top of it).

The gizmo is following Blender's camera (making the experience unusable).

Workaround

I can work around that by disabling the visualization of VR controllers. However if the system has no controllers, they shouldn't be drawn in the first place:

image

**System** * ConceptD 7 (laptop with holographic display using OpenXR backend on Windows) **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-06-19 00:21, hash: `fde76c8b4d0d` Worked: - (technically in old Blenders before we had XR input support) **Short description of error** When turning VR mode on, the controllers show, even when there are no controllers in the system. **Exact steps for others to reproduce the error** I don't know if the issue is unique to this system, but this is a laptop that uses OpenXR backend to handle head tracking and has an holographic display but no "VR controllers". * Turn on VR * You will see a big gizmo in the screen (black circle, with a XYZ gizmo on top of it). The gizmo is following Blender's camera (making the experience unusable). **Workaround** I can work around that by disabling the visualization of VR controllers. However if the system has no controllers, they shouldn't be drawn in the first place: ![image](/attachments/3613317b-b2ce-45cb-af74-84092815a345)
Member

@muxed-reality @JulianEisel , can you check?

@muxed-reality @JulianEisel , can you check?
Member

I can confirm the issue. If no controllers are active, then controllers "gizmos" will show up in the middle of the VR area until they are turned off in the settings. And on the laptop you were using, the middle of your "VR area" is probably the default position for the head tracking.

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.58
Headset: HP Reverb G2 WMR headset tested with the controllers turned off
Blender version: 4.2.0 Alpha, branch: main, commit date: 2024-03-18 22:35, hash: bb4271459f96

I can confirm the issue. If no controllers are active, then controllers "gizmos" will show up in the middle of the VR area until they are turned off in the settings. And on the laptop you were using, the middle of your "VR area" is probably the default position for the head tracking. **System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.58 Headset: HP Reverb G2 WMR headset tested with the controllers turned off Blender version: 4.2.0 Alpha, branch: main, commit date: 2024-03-18 22:35, hash: `bb4271459f96`
Pratik Borhade added
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-03-21 04:11:05 +01:00
Contributor

@dfelinto I don't have access to a computer like yours, but I have checked the changes in my PR with the Windows Mixed Reality and Meta XR simulators, where you can enable and disable the controllers at will, and whenever you disable the controllers there, they disappear in the VR view. Feel free to check the changes in your laptop.

@dfelinto I don't have access to a computer like yours, but I have checked the changes in my PR with the Windows Mixed Reality and Meta XR simulators, where you can enable and disable the controllers at will, and whenever you disable the controllers there, they disappear in the VR view. Feel free to check the changes in your laptop.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-21 03:28:51 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109121
No description provided.